# TheRestOfYourLife

./: CMakeLists.txt
src/: coscubed.cc  cosine_density.cc  main.cc  pi.cc  sphereimp.cc  sphereplot.cc  x2.cc  x2imp.cc
